--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+*{
+  margin: 0 ;
+}
 .App {
   text-align: center;
 }
@@ -19,7 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content:center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
