--- a/src/components/Body.module.css
+++ b/src/components/Body.module.css
@@ -1,9 +1,18 @@
 .hide {
     display: none;
+    position: absolute;
+    bottom: 0;
+    left:0;
+    right:0;
+    padding:1rem;
+    transform: translateY(100%);
+    transition:transform 0.5s ease-in-out;
+    background-color: rgb(0, 0, 0,0.5);
+    
 }
 
-.image:hover +.hide {
+.image:hover+.hide {
     display: block;
-    height:"20vh";
+    transform: translateY(0%);
 
 }
